<resources>
    <!-- Common & Non translatable -->
    <string name="app_name" translatable="false">Makuto a Nepal</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="country_name" translatable="false">Nepal</string>

    <string name="default_text">This is a default text who will be replaced</string>

    <!-- Navbar -->
    <string name="ngos">Business &amp; NGO\'s</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="news">Blog posts</string>

    <!-- Grid Country Fragment -->
    <string name="country_info">Country info</string>
    <string name="history_culture">History &amp; Culture</string>
    <string name="nature">Nature</string>
    <string name="poi">Points of interest</string>
    <string name="trekkings">Trekkings</string>¡
    <string name="gastronomy">Food</string>
    <string name="others">Other data</string>

    <!-- Alert Dialog -->
    <string name="alert_dialog_exit_title">Close \"Makuto a Nepal\"</string>
    <string name="alert_dialog_exit_message">Do you want to exit from the app?</string>
    <string name="alert_dialog_exit_negative_btn" translatable="false">❌</string>
    <string name="alert_dialog_exit_positive_btn" translatable="false">✔️</string>

    <!-- LOCATIONS -->
    <string name="swayambhu" translatable="false">Swayambhunath</string>
    <string name="swayambhu_snippet">The monkey temple</string>

    <string name="pashu" translatable="false">Pashupatinath</string>
    <string name="pashu_snippet">The temple of Sri Pashupatinath</string>

    <string name="boudha" translatable="false">Boudhanath</string>
    <string name="boudha_snippet">One of the world\'s biggest stupa</string>

    <string name="chitwan" translatable="false">Chitwan</string>
    <string name="chitwan_snippet">The biggest National Park in Nepal</string>

    <string name="lumbini" translatable="false">Lumbini</string>
    <string name="lumbini_snippet">Birthplace of Buddha</string>

    <!-- TREKKINGS -->
    <string name="ebc" translatable="false">Everest Base Camp (5.364m | 17,598ft)</string>
    <string name="ebc_snippet">The basecamp under the top of the world</string>

    <string name="poon" translatable="false">Poon Hill (3.210m | 10,530ft)</string>
    <string name="poon_snippet">Amazing views of the Annapurna range</string>

    <string name="dhaula" translatable="false">Dhaulagiri Base Camp (4.650m | 15,252ft)</string>
    <string name="dhaula_snippet">A high-skilled challenge trek </string>

    <!-- BUSINESS -->
    <string name="nischal_guesthouse" translatable="false">Sunny Homestay</string>
    <string name="nischal_guesthouse_snippet">Amazing guesthouse in Sitapaila</string>

    <string name="nottopview_restaurant" translatable="false">Not top of view</string>
    <string name="nottopview_restaurant_snippet">Guesthouse para voluntarios en Sitapaila</string>

    <string name="nayapul_teahouse" translatable="false">Naya Pul teahouse</string>
    <string name="nayapul_teahouse_snippet">Humble teahouse on the beginning of the Annapurna-Poon Hill trek</string>
    <!-- NGOs -->
    <string name="nepalsonrie" translatable="false">Nepal Sonríe</string>
    <string name="nepalsonrie_snippet">School in Hetauda</string>

    <string name="udana" translatable="false">Udana Nepal</string>
    <string name="udana_snippet">Association to help women and girls</string>

    <!-- SETTINGS -->
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Accesibility -->
    <string name="accesibility_title">Accesibility</string>
    <string name="accesibility_body" translatable="false">TalkBack</string>

    <!-- UI/UX -->
    <string name="uiux_title" translatable="false">UI/UX</string>
    <string name="uiux_body">Dark mode</string>

    <!-- Language Preferences -->
    <string name="language_title">Language</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="english" translatable="false">English</string>
    <string name="nepali" translatable="false">नेपाली</string>

    <!-- Permissions Preferences -->
    <string name="permission_title">Permissions</string>
    <string name="internet" translatable="false">Internet</string>
    <string name="storage_access">Storage access</string>
    <string name="location">Location</string>

    <!-- Help Preferences -->
    <string name="help_title">Permissions</string>
    <string name="user_conditions">User conditions</string>
    <string name="support_contact">Support contact</string>
    <string name="app_info">App info</string>

    <!-- Author signature -->
    <string name="author_title">Developed by:</string>
    <string name="author"  translatable="false">Awoenji &amp; anomDev</string>
</resources>