<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/uiux_title">
        <SwitchPreferenceCompat
            app:key="uiux"
            app:title="@string/uiux_body" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/accesibility_title">
        <SwitchPreferenceCompat
            app:key="talkback"
            app:title="@string/accesibility_body" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/language_title">
        <ListPreference
            android:entries="@array/language"
            android:key="language_preference"
            android:title="Language"
            android:entryValues="@array/reply_entries"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/uiux_title">
        <SwitchPreferenceCompat
            app:key="@string/internet"
            app:title="@string/internet"
            />
        <SwitchPreferenceCompat
            app:key="@string/storage_access"
            app:title="@string/storage_access"
            />
        <SwitchPreferenceCompat
            app:key="@string/location"
            app:title="@string/location"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/uiux_title"
        >
        <Preference
            app:key="@string/user_conditions"
            app:title="@string/user_conditions"
            />
        <Preference
            app:key="@string/support_contact"
            app:title="@string/support_contact"
            />
        <Preference
            app:key="@string/app_info"
            app:title="@string/app_info"

            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/author_title">
        <Preference
            app:key="@string/author"
            app:title="@string/author"
            />
    </PreferenceCategory>

</PreferenceScreen>