<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menuitem_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />

    <item
        android:id="@+id/menuitem_country"
        android:icon="@drawable/ic_country"
        android:title="@string/country_name"
        />

    <item
        android:id="@+id/menuitem_associations"
        android:icon="@drawable/ic_business"
        android:title="@string/ngos" />

    <item
        android:id="@+id/menuitem_map"
        android:icon="@drawable/ic_map"
        android:title="@string/map" />

    <!--<item
        android:id="@+id/navBusinessFragment"
        android:icon="@drawable/ic_ubication"
        android:title="Empresas" />-->
</menu>